@@ -62,4 +62,5 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+    jvmArgs '-Djdk.attach.allowAttachSelf=true'
 }
